--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-browser-dynamic": "~11.2.5",
         "@angular/router": "~11.2.5",
         "@syncfusion/ej2-angular-inputs": "^18.4.43",
+        "angular2-notifications": "^9.0.0",
         "chart.js": "^2.9.3",
         "ng2-charts": "^2.2.3",
         "rxjs": "~6.6.0",
