--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
         "@angular/router": "~11.2.5",
         "@syncfusion/ej2-angular-inputs": "^18.4.43",
         "angular2-notifications": "^9.0.0",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
         "chart.js": "^2.9.3",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
         "ng2-charts": "^2.2.3",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
