--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
         "angular2-notifications": "^9.0.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "chai": "^4.3.4",
         "chart.js": "^2.9.3",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
+        "mocha": "^8.4.0",
+        "mockgoose": "^8.0.4",
         "ng2-charts": "^2.2.3",
         "rxjs": "~6.6.0",
+        "supertest": "^6.1.3",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
     },
