fixed the spec files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "ng test",
+        "testlib": "ng test --project share-tool",
+        "testui": "ng test --project project-site",
+        "testweb": "ng test --project website-example",
         "lint": "ng lint",
         "e2e": "ng e2e",
         "lib:build": "ng build share-tool",
