--- a/projects/share-tool/package.json
+++ b/projects/share-tool/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "share-tool",
+  "name": "@tsionac/share-tool",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.0.9",
     "@angular/core": "^11.0.9"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "@angular/animations": "~11.2.5",
+    "@angular/cdk": "^11.2.4",
+    "@angular/compiler": "^11.2.5",
+    "@angular/forms": "~11.2.5",
+    "@angular/material": "^11.2.4",
+    "@angular/platform-browser": "~11.2.5",
+    "@angular/platform-browser-dynamic": "~11.2.5",
+    "@angular/router": "~11.2.5",
+    "@syncfusion/ej2-angular-inputs": "^18.4.43",
+    "rxjs": "~6.6.0",
+    "zone.js": "~0.10.2"
   }
 }
